dataloaders function usage

--- a/Training_loop.ipynb
+++ b/Training_loop.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "fa34676f",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "37b07d0b",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "ab428097",
    "metadata": {},
    "outputs": [
@@ -57,19 +57,12 @@
     }
    ],
    "source": [
-    "transform = torchvision.transforms.Compose([\n",
-    "    torchvision.transforms.ToTensor(),\n",
-    "    torchvision.transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
-    "])\n",
-    "dataset_train = torchvision.datasets.CIFAR10(\".data\", download=True, transform=transform)\n",
-    "dataloader_train = torch.utils.data.DataLoader(dataset_train, batch_size=16)\n",
-    "dataset_test = torchvision.datasets.CIFAR10(\".data\", download=True, train=False, transform=transform)\n",
-    "dataloader_test = torch.utils.data.DataLoader(dataset_train, batch_size=16)"
+    "dataloader_train, dataloader_test = pretrained.load_cifar10_dataloaders()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "99eebb9e",
    "metadata": {},
    "outputs": [],
@@ -91,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def convolutional_pass(model):\n",
@@ -112,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def train_prune_loop(model, data, optimizer, criterion,max_epochs = 2000, epochs_to_prune = 15):\n",
@@ -164,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "passed_data = convolutional_pass(pruned_model_coo)"
@@ -249,16 +242,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(0.8237)"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "eval_accuracy(pruned_model_coo, dataset=\"test\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   }
  ],
