--- a/Training_loop.ipynb
+++ b/Training_loop.ipynb
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "fa34676f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "training_device = \"cpu\"\n",
     "pruning_device = \"cpu\""
    ]
   },
@@ -317,9 +317,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "import nni\n",
+    "from nni.algorithms.compression.v2.pytorch.pruning import LevelPruner\n",
+    "from copy import deepcopy"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "def training_func(model, optimizers, criterion, *_args, **_kwargs):\n",
+    "    model.train()\n",
+    "    model.to(training_device)\n",
+    "    torch.cuda.empty_cache()\n",
+    "    for epoch in range(2):\n",
+    "        for inputs, labels in dataloader_train:\n",
+    "            inputs, labels = inputs.to(training_device), labels.to(training_device)\n",
+    "            optimizers.zero_grad()\n",
+    "            loss = criterion(model(inputs), labels)\n",
+    "            loss.backward()\n",
+    "            optimizers.step()\n",
+    "        print(f\"Loss: {loss}\")\n",
+    "    model.to(pruning_device)\n",
+    "    torch.cuda.empty_cache()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(VGG(\n   (features): Sequential(\n     (0): PrunerModuleWrapper(\n       (module): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n     )\n     (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n     (2): ReLU(inplace=True)\n     (3): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n     (4): PrunerModuleWrapper(\n       (module): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n     )\n     (5): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n     (6): ReLU(inplace=True)\n     (7): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n     (8): PrunerModuleWrapper(\n       (module): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n     )\n     (9): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n     (10): ReLU(inplace=True)\n     (11): PrunerModuleWrapper(\n       (module): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n     )\n     (12): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n     (13): ReLU(inplace=True)\n     (14): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n     (15): PrunerModuleWrapper(\n       (module): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n     )\n     (16): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n     (17): ReLU(inplace=True)\n     (18): PrunerModuleWrapper(\n       (module): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n     )\n     (19): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n     (20): ReLU(inplace=True)\n     (21): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n     (22): PrunerModuleWrapper(\n       (module): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n     )\n     (23): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n     (24): ReLU(inplace=True)\n     (25): PrunerModuleWrapper(\n       (module): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n     )\n     (26): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n     (27): ReLU(inplace=True)\n     (28): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n   )\n   (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n   (classifier): Sequential(\n     (0): PrunerModuleWrapper(\n       (module): PrunerModuleWrapper(\n         (module): Linear(in_features=512, out_features=4096, bias=True)\n       )\n     )\n     (1): ReLU(inplace=True)\n     (2): Dropout(p=0.5, inplace=False)\n     (3): PrunerModuleWrapper(\n       (module): PrunerModuleWrapper(\n         (module): Linear(in_features=4096, out_features=4096, bias=True)\n       )\n     )\n     (4): ReLU(inplace=True)\n     (5): Dropout(p=0.5, inplace=False)\n     (6): PrunerModuleWrapper(\n       (module): PrunerModuleWrapper(\n         (module): Linear(in_features=4096, out_features=10, bias=True)\n       )\n     )\n   )\n ),\n {'classifier.0.module': {'weight': tensor([[0., 0., 1.,  ..., 0., 0., 0.],\n           [0., 0., 0.,  ..., 0., 0., 0.],\n           [0., 0., 1.,  ..., 0., 0., 0.],\n           ...,\n           [1., 0., 0.,  ..., 0., 0., 0.],\n           [1., 0., 0.,  ..., 0., 0., 0.],\n           [0., 0., 0.,  ..., 0., 0., 0.]]),\n   'bias': tensor([1., 0., 1.,  ..., 1., 1., 1.])},\n  'classifier.3.module': {'weight': tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n           [0., 0., 0.,  ..., 0., 0., 0.],\n           [0., 0., 0.,  ..., 0., 0., 0.],\n           ...,\n           [0., 0., 0.,  ..., 0., 0., 0.],\n           [1., 0., 0.,  ..., 0., 0., 0.],\n           [0., 0., 0.,  ..., 0., 0., 0.]]),\n   'bias': tensor([1., 0., 1.,  ..., 1., 1., 0.])},\n  'classifier.6.module': {'weight': tensor([[1., 0., 0.,  ..., 0., 0., 0.],\n           [1., 0., 0.,  ..., 0., 0., 0.],\n           [0., 0., 1.,  ..., 0., 0., 0.],\n           ...,\n           [0., 0., 0.,  ..., 0., 0., 0.],\n           [0., 0., 0.,  ..., 0., 0., 0.],\n           [0., 0., 0.,  ..., 0., 1., 0.]]),\n   'bias': tensor([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])}})"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time\n",
+    "new_very_pruned = deepcopy(pruned_model)\n",
+    "for sparsity in [0.93, 0.96, 0.99]:\n",
+    "    config_list = [{ 'sparsity': sparsity, 'op_types': ['Linear'] }]\n",
+    "    pruner = LevelPruner(new_very_pruned, config_list)\n",
+    "    new_very_pruned, _ = pruner.compress()\n",
+    "    print(\"Pruned!\")\n",
+    "    training_func(new_very_pruned, torch.optim.Adam(new_very_pruned.parameters()), torch.nn.CrossEntropyLoss())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "new_very_pruned.eval()\n",
+    "eval_accuracy(new_very_pruned, dataset=\"test\")"
+   ],
    "metadata": {
     "collapsed": false
    }
