--- a/models/training_loop.ipynb
+++ b/models/training_loop.ipynb
@@ -113,7 +113,7 @@
     "    model.train()\n",
     "    for epoch in range(max_epochs):\n",
     "        if epoch % epochs_to_prune == 0:\n",
-    "            layers.prune_model(model.classifier, dummy_input)\n",
+    "            layers.prune_sparse_model(model.classifier, dummy_input)\n",
     "            print(\"Pruned!\")\n",
     "        for entry in data:\n",
     "            inputs_for_sparse, labels = entry\n",
